examples/test/testpolicy15930.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15930
  namespace: namespace130
spec:
  podSelector:
    matchLabels:
      key19: value27
      key0: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value4
          key41: value41
      podSelector:
        matchLabels:
          key36: value18
          key44: value9
